--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloggers Paradise</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/logo1.jpg"  type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo1.jpg" type="image/x-icon">
 </head>
+
 <body>
-    <div class="navigation">
-<header><h1>Bloggers Paradise</h1></header>
-    </div>
-    
+    <nav>
+        <header>
+            <h1>Bloggers Paradise</h1>
+        </header>
+        <ul>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Sign Up</a>
+            </li>
+            <li>
+                <a href="">Login</a>
+            </li>
+        </ul>
+    </nav>
+
+
+
 </body>
+
 </html>
