login/ sign in style

--- a/login.html
+++ b/login.html
@@ -17,9 +17,9 @@
                 <button type="button" class="toggle-btn" onclick="register()">Register</button>
             </div>
             <div class="social-icons">
-                <img src="fb.png">
-                <img src="g.png">
-                <img src="tw.png">
+                <img src="img/fb.png">
+                <img src="img/g.png">
+                <img src="img/tw.png">
 
             </div>
             <form id="login" class="input-group">
@@ -33,6 +33,7 @@
                 <input type="text" class="input-field" placeholder="Enter Username" required>
                 <input type="email" class="input-field" placeholder="Enter Email address" required>
                 <input type="password" class="input-field" placeholder="Enter Password" required>
+                <input type="password" class="input-field" placeholder="Confirm Password" required>
                 <input type="checkbox" class="check-box"><span>Agree T&C</span>
                 <button type="submit" class="submit-btn">Register</button>
             </form>
