login/ sign in style

--- a/login.html
+++ b/login.html
@@ -9,6 +9,25 @@
 </head>
 
 <body>
+    <nav>
+        <header>
+            <h1>Bloggers Paradise</h1>
+        </header>
+        <ul>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Sign Up</a>
+            </li>
+            <li>
+                <a href="">Login</a>
+            </li>
+        </ul>
+    </nav>
     <div class="hero">
         <div class="form-box">
             <div class="button-box">
@@ -17,9 +36,9 @@
                 <button type="button" class="toggle-btn" onclick="register()">Register</button>
             </div>
             <div class="social-icons">
-                <img src="img/fb.png">
+                <a href="www.facebook.com"><img src="img/fb.png" title="facebook"></a>
                 <img src="img/g.png">
-                <img src="img/tw.png">
+                <img src="img/x.jpg">
 
             </div>
             <form id="login" class="input-group">
