login/ sign in style

--- a/login.html
+++ b/login.html
@@ -36,9 +36,9 @@
                 <button type="button" class="toggle-btn" onclick="register()">Register</button>
             </div>
             <div class="social-icons">
-                <a href="www.facebook.com"><img src="img/fb.png" title="facebook"></a>
-                <img src="img/g.png">
-                <img src="img/x.jpg">
+                <a href="https://www.facebook.com" target="_blank"><img src="img/fb.png" title="Kelvin Shisanya on Facebook"></a>
+                <a href="https://www.instagram.com/kelvinshisanya" target="_blank"><img src="img/g.jfif" title="Kelvin Shisanya on IG"></a>
+                <a href="https://www.twitter.com/vox_shecollects" target="_blank"></a><img src="img/x.jpg" title="Kelvin Shisanya on X formerly Twitter"></a>
 
             </div>
             <form id="login" class="input-group">
