login/ sign in style

--- a/assets/404.html
+++ b/assets/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>
         <span>Error</span> <span>404</span>
     </h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p style="position: absolute;top:80%; color: red;font-size: 2em;">Page Not Found Go back
+        <a href="../index.html" style="text-decoration: none; color:red;">Home</a>
+    </p>
 </body>
+
 </html>
