--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <a href="">Home</a>
             </li>
             <li>
-                <a href="">About</a>
+                <a href="assets/404.html">About</a>
             </li>
             <li>
-                <a href="">Sign Up</a>
+                <a href="login.html">Sign Up</a>
             </li>
             <li>
-                <a href="">Login</a>
+                <a href="login.html">Login</a>
             </li>
         </ul>
     </nav>
