login/ sign in style

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In | Sign Up</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/logo1.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
                 <input type="email" class="input-field" placeholder="Enter Email address" required id="email">
                 <input type="password" class="input-field" placeholder="Enter Password" required id="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
                 <input type="password" class="input-field" placeholder="Confirm Password" required id="confirmPassword">
-                <input type="checkbox" class="check-box" required title="please agree to terms and conditions"><span>Agree T&C</span>
+                <input type="checkbox" class="check-box" required title="please agree to terms and conditions"><span><a href="assets/t&c.md" target="_blank">Agree T&C</a></span>
                 <button type="submit" class="submit-btn">Register</button>
             </form>
         </div>
