--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Bloggers Paradise</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/logo1.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
-    <nav>
+    <!-- <nav>
         <header>
             <h1>Bloggers Paradise</h1>
         </header>
@@ -28,7 +30,16 @@
                 <a href="login.html">Login</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
+    <div class="topnav" id="myTopnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
 
 
 
