login/ sign in style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/logo1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="assets/js.js"></script>
 
 </head>
 
@@ -32,10 +33,13 @@
         </ul>
     </nav> -->
     <div class="topnav" id="myTopnav">
+        <header>
+            Bloggers<span>Paradise</span>
+        </header>
         <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="assets/404.html">About</a>
+        <a href="login.html">Sign Up</a>
+        <a href="login.html">Login</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
