--- a/login.html
+++ b/login.html
@@ -10,25 +10,15 @@
 </head>
 
 <body>
-    <nav>
-        <header>
-            <h1>Bloggers Paradise</h1>
-        </header>
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-            <li>
-                <a href="">About</a>
-            </li>
-            <li>
-                <a href="">Sign Up</a>
-            </li>
-            <li>
-                <a href="">Login</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">Home</a>
+        <a href="assets/404.html">About</a>
+        <a href="login.html">Sign Up</a>
+        <a href="login.html">Login</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
     <div class="hero">
         <div class="form-box">
             <div class="button-box">
